--- a/blog.html
+++ b/blog.html
@@ -7,12 +7,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Krona+One&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Agbalumo&family=Krona+One&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Yellowtail&display=swap"
       rel="stylesheet"
     />
-    <link 
-      href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300;400;500;600;700&display=swap"
-      rel="stylesheet"/>
     <title>Document</title>
   </head>
   <body>
@@ -29,46 +26,94 @@
           <li><a href="blog.html">Blog</a></li>
           <li><a href="nosotros.html">Sobre nosotros</a></li>
           <li><a href="contacto.html">Contacto</a></li>
-          <li><a href="#">🛒</a></li>
         </ul>
       </nav>
     </header>
     <h1>Blog</h1>
-    <Div class="Blog">
-         <div class="Pets"><h2>NUESTRAS MASCOTAS</h2>
-          <br>
-           <p>Nuestras mascotas son animales rescatados que han tenido una segunda oportunidad gracias al trabajo conjunto con diferentes fundaciones y rescatistas. Cada uno de ellos ha pasado por un proceso de cuidado, atención y mucho amor, con el objetivo de brindarles una vida digna mientras encuentran un hogar definitivo.</p>
-           <p>Cada producto vendido en nuestra tienda busca ayudar a mas animales de la calle para brindarles protección salud y un nuevo hogar.</p>
-         </div>
-         <div class="AttentionDay"><h2>DIAS DE ATENCION EN PUNTO FISICO</h2>
-          <br>
-          <p>Tenemos atencion de lunes a sabado de 8:00am a 6:00Pm. Para la participación de eventos estar pendientes a nuestros eventos del blog!, cada evento que sea monetario sera para el cuidado de nuestras mascotas. tambien hay eventos de adopcion responsable y de cuidado a nuestros peluditos.</p>
-         </div>
-    </Div>
-    <div class="adoptOld"><h2>ADOPTARAS UN VIEJITO? DATOS A TENER EN CUENTA</h2>
-        <br>
-        <p>Si estas interesado en la adopción de un perro mayor o viejito por favor tener en cuenta las siguientes consideraciones</p>
-        <br>
-        <a href="https://www.youtube.com/watch?v=tPQzzVgBfko">Cuidado para perros mayores</a>
+    <div class="Blog">
+      <div class="Pets">
+        <h2>NUESTRAS MASCOTAS</h2>
+        <br />
+        <p>
+          Nuestras mascotas son animales rescatados que han tenido una segunda
+          oportunidad gracias al trabajo conjunto con diferentes fundaciones y
+          rescatistas. Cada uno de ellos ha pasado por un proceso de cuidado,
+          atención y mucho amor, con el objetivo de brindarles una vida digna
+          mientras encuentran un hogar definitivo.
+        </p>
+        <p>
+          Cada producto vendido en nuestra tienda busca ayudar a mas animales de
+          la calle para brindarles protección salud y un nuevo hogar.
+        </p>
+      </div>
+      <div class="AttentionDay">
+        <h2>DIAS DE ATENCION EN PUNTO FISICO</h2>
+        <br />
+        <p>
+          Tenemos atencion de lunes a sabado de 8:00am a 6:00Pm. Para la
+          participación de eventos estar pendientes a nuestros eventos del
+          blog!, cada evento que sea monetario sera para el cuidado de nuestras
+          mascotas. tambien hay eventos de adopcion responsable y de cuidado a
+          nuestros peluditos.
+        </p>
+      </div>
+    </div>
+    <div class="adoptOld">
+      <h2>ADOPTARAS UN VIEJITO? DATOS A TENER EN CUENTA</h2>
+      <br />
+      <p>
+        Si estas interesado en la adopción de un perro mayor o viejito por favor
+        tener en cuenta las siguientes consideraciones
+      </p>
+      <br />
+      <a href="https://www.youtube.com/watch?v=tPQzzVgBfko"
+        >Cuidado para perros mayores</a
+      >
     </div>
     <div class="container2">
-       <div class="housePet"><h2>PREPARA EL HOGAR PARA TU NUEVA MASCOTA</h2>
-          <br>
-           <ol>
-            <li>dale tiempo para que se familiarice con su nuevo entorno.</li>
-            <li>Si tienes amigos con perros vacunados y que se llevan bien con los cachorros, deja que los conozca para que desarrolle sus habilidades sociales caninas</li>
-            <li>Debes comenzar el entrenamiento de tu cachorro en cuanto lo lleves a casa.</li>
-            <li>Tu cachorro no necesita juguetes caros, pero asegúrate de que todo lo que le des para jugar sea seguro.</li>
-           </ol>
-       </div>
-         <div class="tips"><h2>CONSEJOS PRACTICOS</h2>
-          <br>
-          <ol>
-            <li>Ten una rutina esto le dara seguridad a tu mascota disminuyendo su estres y mejorando su comportamiento.</li>
-            <li>Siempre mantenle agua fresca a tu perro, sies posible cambiasela todos los dias o dia de por medio</li>
-            <li>Recuerda, los animales no pueden comer lo mismo que nosotros los humanos asi que evita algunos alimentos que puedan afectar su salud, como la cebolla, el chocolate o las uvas</li>
-            <li>Tu mascota siempre requerira atención, cariño, tiempo y presencia. Ellos ahora son parte de tu familia!</li>
-          </ol>         </div>
+      <div class="housePet">
+        <h2>PREPARA EL HOGAR PARA TU NUEVA MASCOTA</h2>
+        <br />
+        <ol>
+          <li>dale tiempo para que se familiarice con su nuevo entorno.</li>
+          <li>
+            Si tienes amigos con perros vacunados y que se llevan bien con los
+            cachorros, deja que los conozca para que desarrolle sus habilidades
+            sociales caninas
+          </li>
+          <li>
+            Debes comenzar el entrenamiento de tu cachorro en cuanto lo lleves a
+            casa.
+          </li>
+          <li>
+            Tu cachorro no necesita juguetes caros, pero asegúrate de que todo
+            lo que le des para jugar sea seguro.
+          </li>
+        </ol>
+      </div>
+      <div class="tips">
+        <h2>CONSEJOS PRACTICOS</h2>
+        <br />
+        <ol>
+          <li>
+            Ten una rutina esto le dara seguridad a tu mascota disminuyendo su
+            estres y mejorando su comportamiento.
+          </li>
+          <li>
+            Siempre mantenle agua fresca a tu perro, sies posible cambiasela
+            todos los dias o dia de por medio
+          </li>
+          <li>
+            Recuerda, los animales no pueden comer lo mismo que nosotros los
+            humanos asi que evita algunos alimentos que puedan afectar su salud,
+            como la cebolla, el chocolate o las uvas
+          </li>
+          <li>
+            Tu mascota siempre requerira atención, cariño, tiempo y presencia.
+            Ellos ahora son parte de tu familia!
+          </li>
+        </ol>
+      </div>
     </div>
     <footer>
       <p>Derechos reservados © 2025</p>
