--- a/index.html
+++ b/index.html
@@ -7,16 +7,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Krona+One&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300;400;500;600;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Agbalumo&family=Krona+One&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Yellowtail&display=swap"
       rel="stylesheet"
     />
     <title>Document</title>
   </head>
-  <body >
+  <body>
     <header class="menu">
       <nav>
         <ul>
@@ -30,26 +26,25 @@
           <li><a href="blog.html">Blog</a></li>
           <li><a href="nosotros.html">Sobre nosotros</a></li>
           <li><a href="contacto.html">Contacto</a></li>
-          <li><a href="#">🛒</a></li>
         </ul>
       </nav>
     </header>
     <main>
-  <section class="inicio" >
-    <div class="contenido-inicio">
-      <h1>Bienvenido a PetShot</h1>
-      <p class="mensaje">
-        Cuidamos, consentimos y acompañamos a tu mascota con productos y
-        servicios pensados para su bienestar.
-      </p>
+      <section class="inicio">
+        <div class="contenido-inicio">
+          <h1>Bienvenido a PetShot</h1>
+          <p class="mensaje">
+            Cuidamos, consentimos y acompañamos a tu mascota con productos y
+            servicios pensados para su bienestar.
+          </p>
 
-      <div class="botones-inicio">
-        <a href="productos.html" class="btn primary">Ver productos</a>
-        <a href="servicios.html" class="btn secondary">Conocer servicios</a>
-      </div>
-    </div>
-  </section>
-</main>
+          <div class="botones">
+            <button>Ver productos</button>
+            <button>Conocer servicios</button>
+          </div>
+        </div>
+      </section>
+    </main>
     <footer>
       <p>Derechos reservados © 2025</p>
     </footer>
