--- a/nosotros.html
+++ b/nosotros.html
@@ -6,14 +6,7 @@
     <link rel="stylesheet" href="assets/css/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Krona+One&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300;400;500;600;700&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Agbalumo&family=Krona+One&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Yellowtail&display=swap" rel="stylesheet">
     <title>Document</title>
   </head>
   <body>
@@ -30,31 +23,47 @@
           <li><a href="blog.html">Blog</a></li>
           <li><a href="nosotros.html">Sobre nosotros</a></li>
           <li><a href="contacto.html">Contacto</a></li>
-          <li><a href="#">🛒</a></li>
         </ul>
       </nav>
     </header>
     <section class="nosotros">
       <h1>Sobre nosotros</h1>
       <p>
-        Somos una empresa dedicada al cuidado y bienestar de las mascotas,
-        comprometida con ofrecer productos y servicios que mejoren la vida de
-        los animales y sus dueño. <br />
-        Nuestro propósito es crear un espacio confiable donde las personas
-        puedan encontrar todo lo necesario para el cuidado de sus mascotas,
-        desde productos esenciales hasta servicios especializados, siempre
-        priorizando la comodidad, la seguridad y el bienestar animal. <br />
-        Creemos que las mascotas son parte de la familia, por eso trabajamos con
-        responsabilidad, cariño y atención al detalle, buscando brindar una
-        experiencia agradable y cercana a cada cliente.
+        Somos una empresa dedicada al cuidado integral de las mascotas, ofreciendo no solo productos de calidad para perros y gatos, sino también servicios especializados, información educativa y apoyo a la adopción responsable. <br />
+        Nuestro propósito es brindar una plataforma donde los dueños de mascotas puedan encontrar todo lo necesario para su bienestar, desde alimentación y accesorios, hasta orientación, servicios y contenidos informativos que promuevan una tenencia responsable y consciente. <br />
+      <div class="que-hacemos">
+        <ul>
+        <li>Comercializamos productos para mascotas como alimentos y accesorios.</li>
+        <li>Promovemos la adopción responsable de animales que buscan un hogar.</li>
+        <li>Ofrecemos servicios básicos relacionados con el cuidado de las mascotas.</li>
+        <li>Compartimos información útil a través de un blog, con consejos, cuidados y recomendaciones. </li>
+        </ul>
+      </div>
       </p>
+      </ul>
+      <section class="mision-y-vision">
+      <div class="mision">
+          <h2>Mision</h2>
+          <p>Brindar soluciones integrales para el cuidado de las mascotas, ofreciendo productos, servicios e información de calidad, fomentando la adopción responsable y fortaleciendo el vínculo entre las personas y sus animales de compañía.</p>
+        </div>
+        <div class="vision">
+            <h2>Visión</h2>
+            <p> Ser una plataforma reconocida por su compromiso con el bienestar animal, destacándose por integrar productos, servicios, adopción e información en un solo espacio digital, confiable y accesible. </p>
+          </div>
+        </section>
+      <section class="valores">
+        <h2>Nuestros valores</h2>
       <ul class="valores">
-        Nuestros valores
         <li>Amor y respeto por los animales</li>
         <li>Calidad y responsabilidad</li>
         <li>Atención cercana y confiable</li>
         <li>Compromiso con el bienestar animal</li>
       </ul>
+    </section>
+    <section class="compromiso">
+      <h2>Nuestro compromiso</h2>
+      <p>Nos comprometemos a promover el bienestar animal a través de la venta responsable de productos, la prestación de servicios útiles, la difusión de información educativa y el apoyo a procesos de adopción que brinden una segunda oportunidad a las mascotas.</p>
+    </section>
     </section>
     <footer>
       <p>Derechos reservados © 2025</p>
