--- a/productos.html
+++ b/productos.html
@@ -7,11 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Krona+One&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300;400;500;600;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Agbalumo&family=Krona+One&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Yellowtail&display=swap"
       rel="stylesheet"
     />
     <title>Document</title>
@@ -31,7 +27,6 @@
           <li><a href="blog.html">Blog</a></li>
           <li><a href="nosotros.html">Sobre nosotros</a></li>
           <li><a href="contacto.html">Contacto</a></li>
-          <li><a href="#">🛒</a></li>
         </ul>
       </nav>
     </header>
@@ -56,7 +51,6 @@
           <p>Comida</p>
         </li>
       </ul>
-      <hr />
     </div>
     <section class="productos">
       <h1 class="titulo1-al">Alimentos</h1>
@@ -517,8 +511,8 @@
           <h2>Cuidado Dental Diario para Perros</h2>
           <p class="price">21.864 COP</p>
           <p class="descripcion">
-            descubre el Snak DentaLife Razas Grandes, una deliciosa
-            golosina diseñada especialmente para el cuidado bucal de tu perro.
+            descubre el Snak DentaLife Razas Grandes, una deliciosa golosina
+            diseñada especialmente para el cuidado bucal de tu perro.
           </p>
           <div class="botones">
             <button>Comprar</button>
