arreglo de errores

--- a/blog.html
+++ b/blog.html
@@ -29,6 +29,7 @@
         </ul>
       </nav>
     </header>
+    <main>
     <h1>Blog</h1>
     <div class="Blog">
       <div class="Pets">
@@ -115,6 +116,7 @@
         </ol>
       </div>
     </div>
+  </main>
     <footer>
       <p>Derechos reservados © 2025</p>
     </footer>
