--- a/productos.html
+++ b/productos.html
@@ -30,7 +30,7 @@
         </ul>
       </nav>
     </header>
-
+    <main>
     <h1>Productos</h1>
     <div class="filtrobar">
       <!-- Filtro -->
@@ -550,7 +550,7 @@
         </article>
       </div>
     </section>
-
+    </main>
     <footer>
       <p>Derechos reservados © 2025</p>
     </footer>
