--- a/nosotros.html
+++ b/nosotros.html
@@ -26,6 +26,7 @@
         </ul>
       </nav>
     </header>
+    <main>
     <section class="nosotros">
       <h1>Sobre nosotros</h1>
       <p>
@@ -65,6 +66,7 @@
       <p>Nos comprometemos a promover el bienestar animal a través de la venta responsable de productos, la prestación de servicios útiles, la difusión de información educativa y el apoyo a procesos de adopción que brinden una segunda oportunidad a las mascotas.</p>
     </section>
     </section>
+    </main>
     <footer>
       <p>Derechos reservados © 2025</p>
     </footer>
